[package]
name = "nature_of_code"
version = "0.1.0"
authors = ["mubiquity <cryan118@gmail.com>"]

[dependencies]
clap = {version = "2.31", features = ["yaml"]}
rand = "0.5.0-pre.0"
rulinalg = "0.4.2"
piston = "0.36.0"
pistoncore-glutin_window = "0.45.3"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.52.0"
noise = "0.5.1"
